# rust-kafka-example

./: Cargo.toml
src/: consumer.rs  producer.rs
